--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -2,25 +2,53 @@
     margin:0;
     padding:0;
 }
-#wrapper{
-    width:66%;
+html {
+    height:100%;
+    background-color: #ade;
+}
+#container{
+    width:900px;
     margin:auto;
+    position:relative;
 }
-#header{
-    background-color:#ade;
+
+#wrapper{
+    //margin:auto;
+    position:relative;
+    width: 900px;
+    margin: 0 auto;
+    min-height:60%;
+    height:auto !important;
+    height:100%;
+
+    background-color:#FFFFE0;
+    border-style:solid;
+    border-width:2px;
+    border-radius: 25px;
+        -webkit-border-radius: 25px;
+        -moz-border-radius: 25px;
+    min-height:10px;
 }
+
 #header>h1{
+    padding-left: 25px;
     font-size:200%;
+    font-family: helvetica;
 }
 h2{
+    padding-left: 25px;
     font-size:130%;
     font-family:sans-serif;
 }
 #content{
-    margin:12px 0;
-    width:70%;
+    width:570px;
     float:left;
+    padding:20px 30px 10px 30px;
 }
+#content p{
+
+}
+
 #side_bar{
     margin:12px 0;
     width :30%;
@@ -39,19 +67,23 @@ h1{
     color:#333;
     border-top:solid 1px #69a;
 }
-ol{
+#nav ol{
     padding-top:20px;
-    background-color:#ade;
+    /*background-color:#ade;*/
     display:block;
+    float: right;
 }
-li{
-    color:white;
-    text-align:center;
+#nav ol li{
+    /*color:white;*/
+    text-align:right;
     display:inline;
-    padding:5px 10px 0 10px;
+    padding:5px 0 0 0;
     margin-right:2px;
-    background-color: #69a;
+    /*background-color: #69a;*/
 }
 a{
     text-decoration:none;
+}
+p{
+    padding:0 8px;
 }
