--- a/views/layout.haml
+++ b/views/layout.haml
@@ -7,9 +7,9 @@
     #container
       /#header
       #nav
-        %h1 jacktrick.com
+        %h1 jacktrick
         %h2 personal site of jack bracken
-        %ol
+        %ul
           %a(href="/")
             %li HOME
           %a(href="blog")
