--- a/views/layout.haml
+++ b/views/layout.haml
@@ -9,6 +9,7 @@
       #nav
         %h1 jacktrick
         %h2 personal site of jack bracken
+        %img(src="img/me2.png")
         %ul
           %a(href="/")
             %li HOME
