--- a/views/layout.haml
+++ b/views/layout.haml
@@ -12,7 +12,7 @@
         %img(src="img/me2.png")
         %ul
           %a(href="/")
-            %li HOME
+            %li ABOUT
           %a(href="blog")
             %li BLOG
           %a(href="code")
