--- a/views/layout.haml
+++ b/views/layout.haml
@@ -5,14 +5,13 @@
     %link(rel="stylesheet" href="stylesheets/styles.css")
   %body
     #container
-      /#header
       #nav
         %h1 jacktrick
         %h2 personal site of jack bracken
-        %img(src="img/me2.png")
+        %img.profile_img(src="img/me2.png" alt="Mah ugly mug")
         %ul
           %a(href="/")
-            %li ABOUT
+            %li.active_page ABOUT
           %a(href="blog")
             %li BLOG
           %a(href="code")
