--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -25,8 +25,7 @@ body {
 }
 
 #container {
-    max-width: 800px;
-    height: 100%;
+    max-width: 1020px;
 }
 
 #nav {
@@ -34,12 +33,12 @@ body {
     position: fixed;
     width:240px;
     background-color: #1d1e24;
-    min-height: 100%;
+    height: 100%;
     color: #8da893;
 }
 
 #nav h1 {
-    padding:16px 8px 0 8px;
+    padding:24px 8px 0 8px;
     font-size: 42px;
     text-align: center;
 }
@@ -63,7 +62,6 @@ body {
 }
 
 #nav ul li {
-
     text-decoration: none;
     font-size: 40px;
     text-align: center;
@@ -80,29 +78,31 @@ body {
     color: #8da893;
 }
 
-#wrapper{
-
-}
-
-#header>h1{
-
-}
-
-h2{
-
-}
-
 #content{
-    float: right;
-    max-width: 500px;
+    width:70%;
+    margin-left: 240px;
+    max-width: 800px;
+    padding-top: 24px;
+    padding-bottom: 1px;
 }
 
-#content p{
+.post-title{
 
 }
 
-h1{
+.post-date{
 
+}
+
+.post-box{
+    background-color: white;
+    width:600px;
+    /*margin-left: 16px;*/
+    margin-left: 24px;
+    margin-bottom: 20px;
+        -moz-border-radius-bottomright: 50px 25px;
+        border-bottom-right-radius: 50px 25px;
+    padding:30px;
 }
 
 a{
@@ -112,4 +112,8 @@ a{
 
 p{
     font-family: "helvetica";
+}
+
+.post-box ul {
+    /*padding-left: 24px;*/
 }
