--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -100,6 +100,8 @@ body {
     /*margin-left: 16px;*/
     margin-left: 24px;
     margin-bottom: 20px;
+    border: 2px;
+    border-style: solid;
         -moz-border-radius-bottomright: 50px 25px;
         border-bottom-right-radius: 50px 25px;
     padding:30px;
