--- a/views/index.haml
+++ b/views/index.haml
@@ -1,5 +1,5 @@
 %div.post-box
-  %h2 HTML Ipsum Presents
+  %h1 HTML Ipsum Presents <span class="post-date">12th Nov, 2012</span>
   %p
     %strong Pellentesque habitant morbi tristique
     senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
@@ -10,13 +10,13 @@
     ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.
     %a{:href => "#"} Donec non enim
     in turpis pulvinar facilisis. Ut felis.
-  %h3 Header Level 3
+  %h2 Header Level 2
   %ol
     %li Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
     %li Aliquam tincidunt mauris eu risus.
   %blockquote
     %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.
-  %h4 Header Level 4
+  %h3 Header Level 3
   %ul
     %li Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
     %li Aliquam tincidunt mauris eu risus.
@@ -31,7 +31,7 @@
         }
 
 %div.post-box
-  %h2 HTML Ipsum Presents
+  %h1 HTML Ipsum Presents <span class="post-date">12th Nov, 2012</span>
   %p
     %strong Pellentesque habitant morbi tristique
     senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
@@ -42,13 +42,13 @@
     ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.
     %a{:href => "#"} Donec non enim
     in turpis pulvinar facilisis. Ut felis.
-  %h3 Header Level 3
+  %h2 Header Level 2
   %ol
     %li Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
     %li Aliquam tincidunt mauris eu risus.
   %blockquote
     %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.
-  %h4 Header Level 4
+  %h3 Header Level 3
   %ul
     %li Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
     %li Aliquam tincidunt mauris eu risus.
