Added models directory to clean up overall structure. Updated .gitignore to protect database login details. Edited index and blog pages. Added box shadow to blog posts.

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,9 +1,4 @@
-- @posts.each do |post|
-  %div.post-box
-    %h1
-      = post.title
-      <span class="post-date">
-      =(post.created_at)
-      </span>
-    %p
-      =post.body
+%div.post-box
+  %h1 Under Construction!
+  %p
+    But welcome anyway. Everything here is very much still a work-in-progress.
