--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -114,6 +114,8 @@ body {
         -moz-border-radius-bottomright: 50px 25px;
         border-bottom-right-radius: 50px 25px;
     background-color: white;
+
+    box-shadow: 10px 10px 30px #493227;
 }
 
 h1, h2, h3 {
