Updated home page. Updated css to style lists

--- a/views/index.haml
+++ b/views/index.haml
@@ -2,3 +2,16 @@
   %h1 Under Construction!
   %p
     But welcome anyway. Everything here is very much still a work-in-progress.
+  %p
+    There are a lot of things still to do:
+    %ul
+      %li Add route logic for individual blog posts
+      %li Implement admin area
+      %li Add markdown support for blog-posts/comments
+      %li Add twitter and github integration
+      %li Photography section (a side-project in and of itself)
+      %li Iconography! Or a favicon at the very least.
+      %li Replace that photograph. Probably.
+      %li And the css is far from complete...
+  %p
+    If for any reason you want to get in touch with me, I can be reached by email at contact at jacktrick dot com.
