Added single post support. Fixed issue in layout.haml with relative paths on static assets.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,13 +2,13 @@
 %html
   %head
     %title jacktrick.com
-    %link(rel="stylesheet" href="stylesheets/styles.css")
+    %link(rel="stylesheet" href="/stylesheets/styles.css" type="text/css")
   %body
     .container
       .nav
         .headline jacktrick
         .site-description-text personal site of jack bracken
-        %img.profile_img(src="img/me2.png" alt="Mah ugly mug")
+        %img.profile_img(src="/img/me2.png" alt="Jack Bracken. Juggling developer extraordinaire.")
         /warning, ghetto navbar ahead - need to rewrite to be more DRY
         %ul
           %a(href="/")
