Updated todo list in index page

--- a/views/index.haml
+++ b/views/index.haml
@@ -5,13 +5,22 @@
   %p
     There are a lot of things still to do:
     %ul
-      %li Add route logic for individual blog posts
+      %li Add route logic for individual blog posts (partially complete)
+      %ol
+        %li Need to add error checking
+        %li Make blog h1s hyperlinks to the individual post
+      %li Route validation for blog pagination
       %li Implement admin area
       %li Add markdown support for blog-posts/comments
       %li Add twitter and github integration
       %li Photography section (a side-project in and of itself)
       %li Iconography! Or a favicon at the very least.
+      %ol
+        %li Favicon complete! :D
       %li Replace that photograph. Probably.
       %li And the css is far from complete...
+      %ol
+        %li Spacing on list elements is a bit crowded.
+        %li The CSS itself is messy.
   %p
     If for any reason you want to get in touch with me, I can be reached by email at contact at jacktrick dot com.
